# rabbitChat

./: README.md
client/project/: loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  rabbitChat.pro
client/project/controller/: login_controller.cpp  login_controller.hpp
client/project/memory/byte_array/: byte_array.hpp  queue_byte_array.cpp  queue_byte_array.hpp
client/project/memory/serialize/: serialize_base.cpp  serialize_base.hpp  serialize_manager.cpp  (+1 more)
client/project/model/: chat_manager.cpp  chat_manager.hpp
client/project/network/: msg_handler.cpp  msg_handler.h  networkagent.cpp  networkagent.h  networkmanager.cpp  networkmanager.h
client/project/network_manager/: msg_handler.cpp  msg_handler.h  networkagent.cpp  networkagent.h  networkmanager.cpp  networkmanager.h
client/project/ui/: chatwindow.cpp  chatwindow.h  chatwindow.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerwindow.cpp  registerwindow.h  registerwindow.ui  ui_manager.cpp  ui_manager.hpp
common/: base_type.hpp  message_code.hpp  protocol_def.cpp  protocol_def.hpp  protocol_def.xml
common/net_msg/: chat_msg.hpp  login_msg.hpp  msg_base.hpp
server/: CMakeLists.txt
server/src/: main.cpp
server/src/network/: message_handler.cpp  message_handler.hpp  network_agent.cpp  network_agent.hpp
server/src/network/player/: player_manager.cpp  player_manager.hpp
server/src/player/: player.cpp  player.hpp  player_manager.cpp  player_manager.hpp
server/vs2015_pro/: rabbitChat.sln  rabbitChat.vcxproj  rabbitChat.vcxproj.filters
